--- a/pom.xml
+++ b/pom.xml
@@ -83,5 +83,10 @@
   		<artifactId>bukkit</artifactId>
   		<version>1.6.2-R0.2-SNAPSHOT</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.json</groupId>
+  		<artifactId>json</artifactId>
+  		<version>20090211</version>
+  	</dependency>
   </dependencies>
 </project>
