- add a README - get pom.xml to go out and get bukkit versions autoamtically

--- a/pom.xml
+++ b/pom.xml
@@ -79,11 +79,20 @@
     <finalName>${project.name}</finalName>
   </build>
 
+    <repositories>
+        <repository>
+            <id>bukkit-repo</id>
+            <url>http://repo.bukkit.org/content/groups/public/</url>
+        </repository>
+    </repositories>
+    
   <dependencies>
   	<dependency>
   		<groupId>org.bukkit</groupId>
   		<artifactId>bukkit</artifactId>
-  		<version>1.6.2-R0.2-SNAPSHOT</version>
+  		<version>1.7.2-R0.2</version>
+  		<type>jar</type>
+  		<scope>provided</scope>
   	</dependency>
   	<dependency>
   		<groupId>org.json</groupId>
